# TuningTools

./: .cs_files  .cs_workspaces  .gitignore  CMakeLists.txt  Changelog  readme.ipynb  readme.md
FastNetTool/: FastNetTool.h  FastnetPyWrapper.h  IEventModel.h  IFastNetTool.h
FastNetTool/neuralnetwork/: Backpropagation.h  FeedForward.h  INeuralNetwork.h  NetConfHolder.h  NeuralNetwork.h  RProp.h
FastNetTool/system/: DataHandler.h  MsgStream.h  defines.h  macros.h  ndarray.h  util.h
FastNetTool/training/: PatternRec.h  Standard.h  Training.h
Root/: Backpropagation.cxx  FastnetPyWrapper.cxx  FeedForward.cxx  IFastNetTool.cxx  LinkDef.h  MsgStream.cxx  NeuralNetwork.cxx  PatternRec.cxx  RProp.cxx  Standard.cxx  Training.cxx  TuningToolPyWrapper.cxx  TuningUtil.cxx  boost_expose.cxx  ndarray.cxx  util.cxx
TuningTools/: FastnetPyWrapper.h  IEventModel.h  RingerEgamma.h  RingerPhysVal.h  RingerPhysVal_v2.h  RingerTPNtuple.h  SkimmedNtuple.h  TuningToolPyWrapper.h
TuningTools/neuralnetwork/: Backpropagation.h  FeedForward.h  NetConfHolder.h  NeuralNetwork.h  RProp.h
TuningTools/system/: DataHandler.h  defines.h  ndarray.h  util.h
TuningTools/training/: PatternRec.h  Standard.h  Training.h  TuningUtil.h
cmt/: Makefile.RootCore  boost_test.cxx  boost_test.h  install_boost.sh  install_core.sh  install_deps.sh  install_exmachina_deps.sh  precompile.RootCore
doc/: CreateData.ipynb  Tuning.ipynb
python/: CreateData.py  CreateJob.py  CreateTuningJobFiles.py  CrossValid.py  CrossValidStat.py  DataCurator.py  DecisionMaking.py  Event.py  FastNet.py  FileIO.py  FilterEvents.py  IEventModel.h  LimitedTypeList.py  Logger.py  LoopingBounds.py  MainLoopInclude.py  Neural.py  Parser.py  PreProc.py  Preprocess.py  ReadData.py  ReadPhysVal.py  SecPreProc.py  SubsetGenerator.py  TrainJob.py  TuningJob.py  TuningTool.py  TuningWrapper.py  __init__.py  coreDef.py  data_iris.py  defines.py  neuralFromValidate  npdef.py  run_events.py  util.py  validate.py
python/Mon/: BeamerMonReport.py  BeamerTemplates.py  MonTuningInfo.py  MonTuningTool.py  PlotHelper.py  TuningStyle.py  __init__.py
python/crossValidation/: SubsetGenerator.py  __init__.py
python/dataframe/: BranchEffCollector.py  EnumCollection.py  ReadEgamma.py  ReadPhysVal.py  ReadPhysVal_v2.py  ReadSkimmedNtuple.py  ReadSkimmedNtuple_v2.py  ReadTPNtuple.py  __init__.py
python/export/: CreateSelectorFiles.py  ExportModels.py  TrigMultiVarHypo_v2.py  TrigMultiVarHypo_v3.py  TrigMultiVarHypo_v4.py  __init__.py
python/jobs/: NeuralTrainingLoop_fastnet_topOption.py
python/keras_util/: callbacks.py
python/misc/: RootLinearFit.py
python/monitoring/: BeamerMonReport.py  BeamerTemplates.py  CrossValidStatDataCurator.py  CrossValidStatDrawer.py  MonTuningInfo.py  MonTuningTool.py  MonitoringHelper.py  MonitoringTool.py  PlotFunctions.py  PlotHelper.py  PlotHolder.py  SlidesMaker.py  TuningMonitoringInfo.py  TuningMonitoringTool.py  TuningStyle.py  TuningToolsBeamerTemplates.py  __init__.py  util.py
python/monitoring/plots/: PlotFunctions.py  SlidesMaker.py  TAxisFunctions.py
python/parsers/: BaseModuleParser.py  CreateData.py  CreateDataPser.py  CreateTuningJobFiles.py  CreateTuningJobFilesPser.py  CrossValStats.py  CrossValidStat.py  CrossValidStatMon.py  DataCuration.py  TuningJob.py  TuningJobPser.py  TuningToolsGrid.py  __init__.py
python/plots/: BeamerMaker.py  CrossValidPlots.py  __init__.py  macros.py
python/statistics/: CrossValidStat.py
scripts/: bsub_run.csh  bsub_submit.sh  buildthis.sh  grid_exec.py  grid_run.sh  joboption_validate.py  run_events.py  run_offline_filter.py  validate.py  validate_offline.py
scripts/analysis_scripts/Offline_MC14_binned/: export_offline.py
scripts/analysis_scripts/Trigger_201711XX_data17_v7/: data  (+6 more)
scripts/athena/: gen-recotf-src.py
scripts/demo/: createCrossValidFiles.py
scripts/grid_scripts/: a  add_container.sh  all.sh  createGRIDTuningJobFiles.py  crossValStatGRIDAnalysis.py  fileMergingGRID.py  full2SlimGRID.py  genGRIDdata.py  retryBSUBtuning.py  runBSUBtuning.py  runGRIDtuning.py  runGRIDtunning.py  run_dump.py  submit.sh  toUniqueDS.py
scripts/grid_submit/: add_container.sh  bsub_job.py  bsub_script.sh  bsub_submit.py  bsub_submit.sh  exec.py  genGRIDdata.py  gridCreateData  gridCreateJob  runGRIDtunning.py  test_gridCreateDataAndJobs.sh  test_gridCreateJob.sh
scripts/jenkins/: run_tests.sh
scripts/run_on_grid/: BSUB_tuningJob.py  bsub_script.sh  gridCreateData  gridCreateData.py  tuningJob.py
scripts/skeletons/: create_data.py  create_plots.py  create_tuningfiles.py  cross_valid_stats.py  datacurator.py  dump_eff_rpnorm.py  export_online.py  matToRoot.py  setup_data.sh  time_test.py
scripts/standalone/: createData.py  createTuningJobFiles.py  crossValStatAnalysis.py  crossValStatMonAnalysis.py  crossValStatsAnalysis.py  crossValStatsMonAnalysis.py  exportPDFs.py  exportTree2Numpy.py  fileJuicer.py  fileMerging.py  filterTree.py  fixTDArchieveNumpyOrder.py  full2Slim.py  haddp.py  npProj2TTProj.py  ppMatProj2TTProj.py  runExpertTuning.py  runTuning.py  run_createData.py  run_crossvalid.py  run_popen_jobs.py  toMatlab.py
scripts/validate/: core_test.py  crossval_revert.py  export_events.py  export_online.py  export_tunedDiscr.py  extractor.sh  get_eff_table.py  measure_time.py  memory_test.py  run_events.py  run_offline_filter.py  test_gridCreateData.sh  test_gridCreateJob.sh  time_test.py  tuning_job_test.py  validate.py  validate_createJob.py  validate_crossValStat.py  validate_crossValidStats.py  validate_fastnet.py  validate_fastnet_ringerRp.py  validate_filterEvents.py  validate_filterEvents_offline.py  validate_jobconfig.py  validate_offline.py  validate_output_files.py  validate_train.py
util/: validate.cxx  validateNetwork.cxx
(+69 files in other folders)
